# news_api

./: README.md  _api_.py  api_Taci.py  pyproject.toml  requirements.txt  testar_conexao.ipynb
news_api/: main.ipynb  news.db  news.json
news_api_dbt/: dbt_project.yml
