[tool.poetry]
name = "news-api"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
ipykernel = "^6.29.4"
sqlalchemy = "^2.0.29"
dbt-sqlite = "^1.4.0"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
